<resources>
    <string name="app_name">Digital House Foods</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="required_field">This field is required!</string>
    <string name="password_match">Password doesn\'t match</string>
    <string name="store_image">Store image</string>
    <string name="pratos_principais">Pratos principais</string>
    <string name="dish_image">Dish image</string>
    <string name="fecha_as">Fecha às %1$s</string>
</resources>